--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,7 @@ target-version = "py310"
 [tool.ruff.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
 max-complexity = 10
+
+[tool.bandit]
+exclude_dirs = ["tests", ".venv", "dist", "build", "setup.py"]
+skips = []
